--- a/css/admin.css
+++ b/css/admin.css
@@ -346,8 +346,7 @@ main .recent_jobs h2{
 main .recent_jobs table{
  font-size: 10px;
  width: 100%;
- border-radius: var(--card-border-radius);
- border: 1px solid var(--clr-white);
+ border: 1px solid white;
  padding: var(--card-padding);
  text-align: center;
  box-shadow: var(--box-shadow);
@@ -363,18 +362,14 @@ main .recent_jobs table:hover{
 
 main table tbody td{
   height: 3.8rem;
-  border: 1px solid var(--clr-white);
+  border: 1px solid white;
   color:white
 }
 
 main table thead th{
   height: 3.8rem;
-  border: 1px solid var(--clr-white);
+  border: 1px solid white;
   color:white
-}
-
-main table tbody tr:last-child td{
-  border: none;
 }
 
 main .recent_jobs a{
